# oopsys-python

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: default.py  parser.py  protected_async.py  protected_sync.py
src/oopsys_python/: __init__.py  core.py  main.py  report.py  settings.py  transport.py
src/oopsys_python/configuration/: __init__.py  config.py  loggers.py
tests/integrations/: test_holder.py
tests/units/: conftest.py  recording.py  test_capture.py  test_config.py  test_configure.py  test_guard.py  test_ignore.py  test_install.py  test_report.py  test_timeit.py  test_transport.py
