[project]
name = "oopsys-python"
version = "0.1.0"
description = "Catch exceptions, log them, and optionally report to an agent — without crashing your app."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [{ name = "Adam Morington" }]
keywords = ["logging", "errors", "structlog", "async", "monitoring", "exceptions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
]

[project.urls]
Homepage = "https://github.com/morington/oopsys-python"
Repository = "https://github.com/morington/oopsys-python"
Issues = "https://github.com/morington/oopsys-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oopsys_python"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/oopsys_python",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B105"]

[tool.pytest.ini_options]
testpaths = ["tests/units"]
addopts = "-p no:warnings"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = ["tests", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG", "ANN",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D203", "D205", "D211", "D212", "D400", "D401", "D413", "D415", "D417", "D419",
    "COM812",
    "E501", "EM101", "EM102",
    "RUF001", "RUF002", "RUF003", "RUF006",
    "RET505",
    "TC001",
    "TRY003", "TRY300", "TRY301", "TRY400",
    "PYI013", "PYI036",
    "PIE790",
    "PLR0911", "PLR0913", "PLR0915", "PLR1704", "PLR2004",
    "PT018",
    "G004",
    "INP001",
    "UP007", "UP042",
    "A002",
    "ASYNC109",
    "BLE001",
    "C901",
    "DTZ003",
    "FAST001", "FAST002",
    "FBT003",
    "PLC0415",
    "PLW0603",
    "S105",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["TID252", "PLR2004", "S101", "SLF001"]
"examples/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]
